# pumppie

./: .gitignore  Makefile  README.md  demo_agent_setup.py  pyproject.toml  test_agent_quick.py
.github/workflows/: lint.yml
core/: app.py  build.py  main.py  settings.py
core/agent/: __init__.py  agent.py  base.py  dependencies.py  outputs.py
core/agent/config/: __init__.py  agent_config.py
core/agent/tools/: __init__.py  market_data_server.py  test_server.py
core/bot/: buttons.py  commands.py  handlers.py  menu.py  messages.py
core/db/: database.py
core/db/models/: base.py
core/fields/: __init__.py  agent.py  base.py  mcp.py
core/mcp/: client.py  utils.py
core/mcp/servers/toolbox/: tools.yaml
docs/: agent_architecture.md  mcp_servers_guide.md
linter/: README.md  pyproject.toml
logs/: logger.py
tests/: test_agent_basic.py  test_pydantic_agent.py
tools/: check_mcp_servers.py
